--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //google  location api from play services.
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+//    implementation 'com.google.android.gms.location:'
+
 
 }
